# aquarium-object-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: README.md  demo_video_links.md
data/: README.md
models/: README.md
notebooks/: README.md  demo_inference.ipynb
outputs/: README.md
src/aquarium_detection/: __init__.py  anchor_utils.py  augmentations.py  backbone_utils.py  coco_utils.py  config.py  convert_roboflow_csv_to_coco.py  engine.py  faster_rcnn.py  group_by_aspect_ratio.py  helper.py  imagenet_baseline.py  infer_video.py  roi_heads.py  rpn.py  train.py  transforms.py
src/aquarium_detection/legacy/: single_shark_baseline.py
