[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aquarium-object-detection"
version = "0.1.0"
description = "MobileNetV3/Faster R-CNN aquarium object detection project"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
